Bug correct/Overflow-y : auto on phones

--- a/Update/assets/css/main.css
+++ b/Update/assets/css/main.css
@@ -1373,6 +1373,7 @@ input, select, textarea {
 
 			.poptrox-popup .caption > img {
 				padding-bottom: 2%;
+				overflow-y: auto;
 				width: 80%;
 			}
 
